--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,14 +27,15 @@ jobs:
       - name: Set up dependencies
         run: |
           sudo apt-get update -qq
-          sudo apt-get install -y gcc g++ doxygen graphviz python3-yaml
+          sudo apt-get install -y gcc g++ lcov doxygen graphviz python3-yaml
 
-      - name: Install CodeCov and LCOV
-        run: |
-          git clone https://github.com/linux-test-project/lcov.git
-          cd lcov
-          sudo make install
-          cd ..
+    #   - name: Install CodeCov and LCOV
+    #     run: |
+    #       sudo update-alternatives --install /usr/bin/gcov gcov /usr/bin/gcov-7 90
+    #       wget http://ftp.de.debian.org/debian/pool/main/l/lcov/lcov_1.13.orig.tar.gz
+    #       tar xf lcov_1.13.orig.tar.gz
+    #       make -C lcov-1.13 "PREFIX=${HOME}/.local" install
+    #       echo "${HOME}/.local/bin" >> $GITHUB_PATH
 
       - name: Show tool versions
         run: |
